err/pbm.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/jinja_tornado'...
Compiling './lib/python3.5/site-packages/jinja_tornado/jinja_tornado.py'...
***   File "./lib/python3.5/site-packages/jinja_tornado/jinja_tornado.py", line 95
    raise RuntimeError, "Needs jinja2 Environment. Initialize with JinjaApp.init_app first"
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jinja_tornado-0.1.2.dist-info'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pbm'...
Compiling './lib/python3.5/site-packages/pbm/main.py'...
***   File "./lib/python3.5/site-packages/pbm/main.py", line 653
    '~\Local Settings\Application Data\Google\Chrome\User Data')
    ^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 47-48: truncated \UXXXXXXXX escape

Listing './lib/python3.5/site-packages/pbm/plugins'...
Listing './lib/python3.5/site-packages/pbm/static'...
Listing './lib/python3.5/site-packages/pbm/static/brw'...
Listing './lib/python3.5/site-packages/pbm/static/brw/static'...
Listing './lib/python3.5/site-packages/pbm/static/brw/static/js'...
Listing './lib/python3.5/site-packages/pbm/static/brw/static/js/jquery'...
Listing './lib/python3.5/site-packages/pbm/static/brw/static/js/jquery/2.2.3'...
Listing './lib/python3.5/site-packages/pbm/static/brw/static/js/jquery-scrollTo'...
Listing './lib/python3.5/site-packages/pbm/static/brw/static/js/jquery-scrollTo/2.1.2'...
Listing './lib/python3.5/site-packages/pbm/templates'...
Listing './lib/python3.5/site-packages/pbm-0.6.4.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tornado'...
Listing './lib/python3.5/site-packages/tornado/platform'...
Listing './lib/python3.5/site-packages/tornado/test'...
Listing './lib/python3.5/site-packages/tornado/test/csv_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tornado/test/static'...
Listing './lib/python3.5/site-packages/tornado/test/static/dir'...
Listing './lib/python3.5/site-packages/tornado/test/templates'...
Listing './lib/python3.5/site-packages/tornado-4.5.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
